--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 #DB_HOST=localhost
-DB_HOST=db
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=emporio
 DB_USERNAME=root
